export const snapshot = {};

snapshot[`planner 1`] = `
[
  {
    id: "one",
    node: "one",
    path: [
      "one",
    ],
    type: {
      title: "root_one_fn",
      type: "function",
    },
  },
  {
    id: "one.id",
    node: "id",
    path: [
      "one",
      "id",
    ],
    type: {
      format: "uuid",
      title: "root_one_fn_output_id_string_uuid",
      type: "string",
    },
  },
  {
    id: "one.email",
    node: "email",
    path: [
      "one",
      "email",
    ],
    type: {
      format: "email",
      title: "root_one_fn_output_email_string_email",
      type: "string",
    },
  },
  {
    id: "one.nested",
    node: "nested",
    path: [
      "one",
      "nested",
    ],
    type: {
      title: "root_one_fn_output_nested_struct",
      type: "object",
    },
  },
  {
    id: "one.nested.first",
    node: "first",
    path: [
      "one",
      "nested",
      "first",
    ],
    type: {
      title: "root_one_fn_output_nested_struct_first_string",
      type: "string",
    },
  },
  {
    id: "one.nested.second",
    node: "second",
    path: [
      "one",
      "nested",
      "second",
    ],
    type: {
      title: "root_one_fn_output_nested_struct_second_root_one_fn_output_nested_struct_second_float_list",
      type: "list",
    },
  },
  {
    id: "one.nested.third",
    node: "third",
    path: [
      "one",
      "nested",
      "third",
    ],
    type: {
      title: "root_one_fn_output_nested_struct_third_root_one_fn_output_nested_struct_third_boolean_optional",
      type: "optional",
    },
  },
]
`;

snapshot[`planner 2`] = `
{
  one: {
    funcType: {
      input: 2,
      materializer: 0,
      output: 3,
      policies: [
        0,
      ],
      rate_calls: false,
      rate_weight: null,
      runtimeConfig: null,
      title: "root_one_fn",
      type: "function",
    },
    referencedTypes: {
      "one.email": [
        {
          title: "root_one_fn_output_email_string_email",
          type: "string",
        },
      ],
      "one.id": [
        {
          title: "root_one_fn_output_id_string_uuid",
          type: "string",
        },
      ],
      "one.nested": [
        {
          title: "root_one_fn_output_nested_struct",
          type: "object",
        },
      ],
      "one.nested.first": [
        {
          title: "root_one_fn_output_nested_struct_first_string",
          type: "string",
        },
      ],
      "one.nested.second": [
        {
          title: "root_one_fn_output_nested_struct_second_root_one_fn_output_nested_struct_second_float_list",
          type: "list",
        },
        {
          title: "root_one_fn_output_nested_struct_second_float",
          type: "float",
        },
      ],
      "one.nested.third": [
        {
          title: "root_one_fn_output_nested_struct_third_root_one_fn_output_nested_struct_third_boolean_optional",
          type: "optional",
        },
        {
          title: "root_one_fn_output_nested_struct_third_boolean",
          type: "boolean",
        },
      ],
      one: [
        {
          title: "root_one_fn",
          type: "function",
        },
        {
          title: "root_one_fn_output",
          type: "object",
        },
        {
          title: "root_one_fn_input",
          type: "object",
        },
      ],
    },
  },
}
`;

snapshot[`planner 3`] = `
[
  "one  one  one  object  root_one_fn_output  false",
  "one.union1  union1  one/union1  union  root_one_fn_output_union1_union  false",
  "one.union2  union2  one/union2  union  root_one_fn_output_union2_union  false",
  "one.union2\$A.a  a  one/union2\$A/a  integer  root_one_fn_output_union1_union_t0_integer  false",
  "one.union2\$B.b  b  one/union2\$B/b  either  B_b_either  false",
  "one.union2\$B.b\$C1.c  c  one/union2\$B/b\$C1/c  integer  root_one_fn_output_union1_union_t0_integer  false",
  "one.union2\$B.b\$C2.c  c  one/union2\$B/b\$C2/c  string  root_one_fn_output_nested_struct_first_string  false",
]
`;

snapshot[`planner 4`] = `
[
  "one  one  one  object  root_one_fn_output  false",
  "one.union2  union2  one/union2  union  root_one_fn_output_union2_union  true",
  "one.union2\$A.a  a  one/union2\$A/a  integer  root_one_fn_output_union1_union_t0_integer  false",
  "one.union2\$B.b  b  one/union2\$B/b  either  B_b_either  false",
  "one.union2\$B.b\$C1.c  c  one/union2\$B/b\$C1/c  integer  root_one_fn_output_union1_union_t0_integer  false",
  "one.union2\$B.b\$C2.c  c  one/union2\$B/b\$C2/c  string  root_one_fn_output_nested_struct_first_string  false",
  "one.from_union2  from_union2  one/from_union2  integer  root_one_fn_output_union1_union_t0_integer  false",
  "one.union1  union1  one/union1  union  root_one_fn_output_union1_union  true",
  "one.from_union1  from_union1  one/from_union1  integer  root_one_fn_output_union1_union_t0_integer  false",
]
`;

snapshot[`planner: dependencies 1`] = `
[
  "two  two  two  object  root_two_fn_output  false",
  "two.id  id  two/id  integer  root_one_fn_output_union1_union_t0_integer  false",
  "two.email  email  two/email  string  root_one_fn_output_email_string_email  false",
]
`;

snapshot[`planner: dependencies 2`] = `
[
  "two  two  two  object  root_two_fn_output  false",
  "two.id  id  two/id  integer  root_one_fn_output_union1_union_t0_integer  false",
  "two.email  email  two/email  string  root_one_fn_output_email_string_email  false",
  "two.profile  profile  two/profile  object  root_two_fn_output_profile_fn_output  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  root_one_fn_output_nested_struct_first_string  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  root_one_fn_output_nested_struct_first_string  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  root_one_fn_output_nested_struct_first_string  false",
]
`;

snapshot[`planner: dependencies 3`] = `
[
  "two  two  two  object  root_two_fn_output  false",
  "two.id  id  two/id  integer  root_one_fn_output_union1_union_t0_integer  false",
  "two.email  email  two/email  string  root_one_fn_output_email_string_email  false",
  "two.profile  profile  two/profile  object  root_two_fn_output_profile_fn_output  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  root_one_fn_output_nested_struct_first_string  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  root_one_fn_output_nested_struct_first_string  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  root_one_fn_output_nested_struct_first_string  false",
]
`;

snapshot[`planner: dependencies 4`] = `
[
  "two  two  two  object  root_two_fn_output  false",
  "two.email  email  two/email  string  root_one_fn_output_email_string_email  true",
  "two.profile  profile  two/profile  object  root_two_fn_output_profile_fn_output  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  root_one_fn_output_nested_struct_first_string  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  root_one_fn_output_nested_struct_first_string  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  root_one_fn_output_nested_struct_first_string  false",
  "two.id  id  two/id  integer  root_one_fn_output_union1_union_t0_integer  false",
]
`;

snapshot[`planner: dependencies 5`] = `
[
  "two  two  two  object  root_two_fn_output  false",
  "two.email  email  two/email  string  root_one_fn_output_email_string_email  true",
  "two.profile  profile  two/profile  object  root_two_fn_output_profile_fn_output  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  root_one_fn_output_nested_struct_first_string  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  root_one_fn_output_nested_struct_first_string  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  root_one_fn_output_nested_struct_first_string  false",
  "two.taggedPic  taggedPic  two/taggedPic  string  root_one_fn_output_nested_struct_first_string  false",
]
`;

snapshot[`planner: dependencies 6`] = `
[
  "two  two  two  object  root_two_fn_output  false",
  "two.id  id  two/id  integer  root_one_fn_output_union1_union_t0_integer  false",
  "two.email  email  two/email  string  root_one_fn_output_email_string_email  true",
  "two.profile  profile  two/profile  object  root_two_fn_output_profile_fn_output  true",
  "two.profile.email  email  two/profile/email  string  root_one_fn_output_email_string_email  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  root_one_fn_output_nested_struct_first_string  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  root_one_fn_output_nested_struct_first_string  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  root_one_fn_output_nested_struct_first_string  false",
  "two.taggedPic  taggedPic  two/taggedPic  string  root_one_fn_output_nested_struct_first_string  false",
]
`;

snapshot[`planner: dependencies in union/either 1`] = `
[
  "three  three  three  object  root_three_fn_output  false",
  "three.id  id  three/id  integer  root_one_fn_output_union1_union_t0_integer  false",
  "three.user  user  three/user  either  root_three_fn_output_user_either  false",
  "three.user\$RegisteredUser.id  id  three/user\$RegisteredUser/id  string  root_one_fn_output_id_string_uuid  false",
  "three.user\$RegisteredUser.email  email  three/user\$RegisteredUser/email  string  root_one_fn_output_email_string_email  false",
  "three.user\$RegisteredUser.profile  profile  three/user\$RegisteredUser/profile  object  RegisteredUser_profile_fn_output  false",
  "three.user\$RegisteredUser.profile.email  email  three/user\$RegisteredUser/profile/email  string  root_one_fn_output_email_string_email  false",
  "three.user\$RegisteredUser.profile.displayName  displayName  three/user\$RegisteredUser/profile/displayName  string  root_one_fn_output_nested_struct_first_string  false",
  "three.user\$RegisteredUser.profile.profilePic  profilePic  three/user\$RegisteredUser/profile/profilePic  string  root_one_fn_output_nested_struct_first_string  false",
  "three.user\$GuestUser.id  id  three/user\$GuestUser/id  string  root_one_fn_output_id_string_uuid  false",
]
`;

snapshot[`planner: dependencies in union/either 2`] = `
[
  "three  three  three  object  root_three_fn_output  false",
  "three.id  id  three/id  integer  root_one_fn_output_union1_union_t0_integer  false",
  "three.user  user  three/user  either  root_three_fn_output_user_either  false",
  "three.user\$RegisteredUser.id  id  three/user\$RegisteredUser/id  string  root_one_fn_output_id_string_uuid  false",
  "three.user\$RegisteredUser.email  email  three/user\$RegisteredUser/email  string  root_one_fn_output_email_string_email  true",
  "three.user\$RegisteredUser.profile  profile  three/user\$RegisteredUser/profile  object  RegisteredUser_profile_fn_output  false",
  "three.user\$RegisteredUser.profile.email  email  three/user\$RegisteredUser/profile/email  string  root_one_fn_output_email_string_email  false",
  "three.user\$RegisteredUser.profile.displayName  displayName  three/user\$RegisteredUser/profile/displayName  string  root_one_fn_output_nested_struct_first_string  false",
  "three.user\$GuestUser.id  id  three/user\$GuestUser/id  string  root_one_fn_output_id_string_uuid  false",
]
`;
